added java and python highlighting and formatting

--- a/coder/frontend/src/index.html
+++ b/coder/frontend/src/index.html
@@ -10,6 +10,6 @@
     </style>
   </head>
   <body>
-  <code-editor language="java"></code-editor>
+  <code-editor></code-editor>
   </body>
 </html>
