changed fonts and colors, added "back to homepage" button, minor ui improvements

--- a/coder/backend/src/main/resources/static/codingTask.html
+++ b/coder/backend/src/main/resources/static/codingTask.html
@@ -8,6 +8,7 @@
     <script src="codingTask.js" type="module"></script>
 </head>
 <body>
+<a href="../"><button id="homebutton">back to homepage</button></a>
 <h1 id="taskName">Task Name</h1>
 <p id="taskDescription">This is the description of the task.</p>
 <div style="width:100%;height:100%;display: flex">
