--- a/coder/backend/src/main/resources/static/codingTask.html
+++ b/coder/backend/src/main/resources/static/codingTask.html
@@ -8,18 +8,30 @@
     <script src="codingTask.js" type="module"></script>
 </head>
 <body>
-<a href="../"><button id="homebutton">back to homepage</button></a>
-<h1 id="taskName">Task Name</h1>
-<p id="taskDescription">This is the description of the task.</p>
-<div style="width:100%;height:100%;display: flex">
-    <div style="width:50%;height:100%">
-        <div id="monacoEditor"></div>
-        <button id="submit" style="margin-top: 1cm">Submit</button>
+    <header>
+        <a class="title"href="../"> YeetCode </a>
+        <div class="usermenu">
+            <img class="profileicon" src="Profile_Icon.png" alt="x" width="32" height="32">
+            <div class="dropdown">
+                <ul class="dropdownlist">
+                    <li><a> Account</a></li>
+                    <li><a> Logout </a></li>
+                </ul>
+            </div>
+        </div>
+    </header>
+    <!--<a href="../"><button id="homebutton">back to homepage</button></a>-->
+    <h1 id="taskName">Task Name</h1>
+    <p id="taskDescription">This is the description of the task.</p>
+    <div style="width:100%;height:100%;display: flex">
+        <div style="width:50%;height:100%">
+            <div id="monacoEditor"></div>
+            <button id="submit" style="margin-top: 1cm">Submit</button>
+        </div>
+        <div style="margin-left: 1cm">
+            <h1>Evaluation</h1>
+            <p id="evaluation">Nothing to show</p>
+        </div>
     </div>
-    <div style="margin-left: 1cm">
-        <h1>Evaluation</h1>
-        <p id="evaluation">Nothing to show</p>
-    </div>
-</div>
 </body>
 </html>
