--- a/coder/backend/src/main/resources/static/codingTask.html
+++ b/coder/backend/src/main/resources/static/codingTask.html
@@ -15,7 +15,7 @@
             <div class="dropdown">
                 <ul class="dropdownlist">
                     <li><a> Account</a></li>
-                    <li><a> Logout </a></li>
+                    <li><a href="/succ"> Logout </a></li>
                 </ul>
             </div>
         </div>
