--- a/coder/backend/src/main/resources/static/codingTask.html
+++ b/coder/backend/src/main/resources/static/codingTask.html
@@ -20,7 +20,7 @@
             </div>
         </div>
     </header>
-    <!--<a href="../"><button id="homebutton">back to homepage</button></a>-->
+    <a href="../"><button id="homebutton">Back to Homepage</button></a>
     <h1 id="taskName">Task Name</h1>
     <p id="taskDescription">This is the description of the task.</p>
     <div style="width:100%;height:100%;display: flex">
